# pic-store

./: .gitignore  Cargo.toml  README.md  diesel.toml  justfile
.cargo/: config  config.toml
api/: Cargo.toml
api/src/: api_key.rs  auth.rs  config.rs  crud_helpers.rs  error.rs  jobs.rs  lib.rs  main.rs  obfuscate_errors.rs  panic_handler.rs  shared_state.rs  tracing_config.rs
api/src/cmd/: admin.rs  bootstrap.rs  mod.rs  server.rs
api/src/cmd/admin/: bootstrap.rs  make_api_key.rs
api/src/jobs/: create_output_images.rs
api/src/routes/: conversion_profile.rs  health.rs  mod.rs  profile.rs  storage_location.rs  upload_profile.rs
api/src/routes/image/: mod.rs  upload.rs
api/src/routes/profile/: mod.rs
api/tests/: common.rs  main.rs  smoke_test.rs
auth/: Cargo.toml
auth/src/: api_key.rs  error.rs  eval.rs  extract_header.rs  extract_token.rs  fact.rs  lib.rs  parse_biscuit.rs  password.rs  request.rs  session.rs
bootstrap_data/: api_keys.json  conversion_profile.json  project.json  role.json  role_permissions.json  storage_location.json  team.json  upload_profile.json  user.json
convert/: Cargo.toml
convert/src/: error.rs  lib.rs  resize.rs  write_format.rs
data/: storage_location.json  team.json  upload_profile.json  user.json  user_roles.json
db/: Cargo.toml
db/src/: api_key.rs  api_keys.rs  base_image.rs  base_images.rs  conversion_profile.rs  conversion_profile_item.rs  conversion_profiles.rs  enums.rs  images.rs  json.rs  lib.rs  models.rs  object_id.rs  output_image.rs  output_images.rs  permissions.rs  project.rs  projects.rs  role_permissions.rs  roles.rs  schema.rs  session.rs  sessions.rs  storage_location.rs  storage_locations.rs  team.rs  teams.rs  test.rs  upload_profile.rs  upload_profiles.rs  upload_settings.rs  user.rs  user_roles.rs  users.rs
fixtures/: test-input.avif  test-input.heic
http-errors/: Cargo.toml
http-errors/src/: lib.rs
migration/: Cargo.toml
migration/src/: create_table_and_index.rs  lib.rs  m20220101_000001_create_table.rs
migrations/00000000000001_create_user/: down.sql  up.sql
migrations/2022-07-04-014038_init/: down.sql  up.sql
scripts/: env.sh  start_test_postgres_docker.sh
server/: Cargo.toml
storage/: Cargo.toml
storage/src/: error.rs  lib.rs  operator.rs  presigned_url.rs  provider.rs  s3.rs
test/: Cargo.toml  lib.rs
