[package]
name = "pic-store-api"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pic-store"

[[test]]
name = "tests"
path = "tests/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pic-store-auth = { path = "../auth" }
pic-store-convert = { path = "../convert" }
pic-store-db = { path = "../db" }
pic-store-http-errors = { path = "../http-errors" }
pic-store-storage = { path = "../storage" }
async-trait = "0.1.58"
axum = { version="0.6.0", features = ["headers", "json", "multipart"] }
blake3 = "1.3.2"
bytes = "1.3.0"
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6.2"
deadpool-diesel = { version = "0.4.0", features = ["postgres"]}
diesel = { version = "2.0.2", features = ["chrono", "postgres", "uuid", "serde_json"] }
dotenv = "0.15.0"
futures = "0.3.25"
http = "0.2.8"
http-body = "0.4.5"
hyper = "0.14.23"
image = { version = "0.24.5", features= ["avif-decoder", "webp"]}
imageinfo = { git = "https://github.com/dimfeld/imageinfo-rs" }
log = "0.4.17"
num_cpus = "1.14.0"
opentelemetry = { version= "0.17.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.10.0" }
effectum = { version = "0.1.4" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.22.0", features = [ "full", "test-util" ] }
tonic = "0.6.2"
tower = "0.4.13"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-honeycomb = "0.4.3"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
tower-cookies = { version = "0.8.0", features = ["signed"] }
base64 = "0.13.1"
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio-current-thread"] }
liquid = { version = "0.26.0", optional = true }
glob = { version = "0.3.0", optional = true }
eyre = "0.6.8"

[dependencies.tower-http]
version = "0.3.4"
features = [ "catch-panic", "decompression-gzip", "decompression-br", "compression-gzip", "compression-deflate", "limit", "request-id", "trace" ]

[features]
default = ["bootstrap"]
bootstrap = ["dep:glob", "dep:liquid"]

[dev-dependencies]
pic-store-test = { path="../test" }
once_cell = "1.16.0"
reqwest = { version="0.11.13", features=["json"] }
temp-dir = "0.1.11"
wiremock = "0.5.15"
