[package]
name = "pic-store-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pic-store-http-errors = { path = "../http-errors" }
argon2 = "0.4.1"
async-trait = "0.1.56"
axum = "0.5.7"
base64 = "0.13.0"
blake3 = "1.3.1"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
http-body = "0.4.5"
ouroboros = "0.15.0"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = [ "full", "test-util" ] }
tower = "0.4.13"
tower-cookies = { version = "0.7.0", features = ["signed"] }
tracing = "0.1.35"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
time = "0.3.11"
serde_urlencoded = "0.7.1"
eyre = "0.6.8"

[features]
test-slow = []
test-password = []

[dev-dependencies]
assert_matches = "1.5.0"
