[package]
name = "pic-store-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pic-store-http-errors = { path = "../http-errors" }
argon2 = "0.4.1"
async-trait = "0.1.58"
axum = "0.5.17"
base64 = "0.13.1"
blake3 = "1.3.2"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.25"
http-body = "0.4.5"
ouroboros = "0.15.5"
serde = "1.0.147"
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = [ "full", "test-util" ] }
tower = "0.4.13"
tower-cookies = { version = "0.7.0", features = ["signed"] }
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
time = "0.3.17"
serde_urlencoded = "0.7.1"
eyre = "0.6.8"

[features]
test-slow = []
test-password = []

[dev-dependencies]
assert_matches = "1.5.0"
