[package]
name = "pic-store-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pic-store-http-errors = { path = "../http-errors" }
argon2 = "0.4.1"
async-trait = "0.1.68"
axum = "0.6.15"
base64 = "0.21.5"
blake3 = "1.3.3"
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.28"
http-body = "0.4.5"
ouroboros = "0.15.6"
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = [ "full", "test-util" ] }
tower = "0.4.13"
tower-cookies = { version = "0.8.0", features = ["signed"] }
tracing = "0.1.37"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
time = "0.3.20"
serde_urlencoded = "0.7.1"
eyre = "0.6.8"

[features]
test-slow = []
test-password = []

[dev-dependencies]
assert_matches = "1.5.0"
