[package]
name = "pic-store-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5", features= ["webp"]}
imageinfo = { git = "https://github.com/dimfeld/imageinfo-rs" }
libavif = { version = "0.10.1", default-features = false, features = ["codec-dav1d"] }
ravif = "0.9.1"
rgb = "0.8.34"
thiserror = "1.0.37"
webp = "0.2.2"

[features]
default = ["codec-dav1d"]
codec-dav1d = ["libavif/codec-dav1d"]
codec-aom = ["libavif/codec-aom"]

test-slow = []
