[package]
name = "pic-store-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
image = { version = "0.24.7", features= ["webp"]}
imageinfo = { git = "https://github.com/dimfeld/imageinfo-rs" }
libavif = { version = "0.12.0", default-features = false, features = ["codec-dav1d"] }
libheif-rs = "0.22.0"
ravif = "0.11.3"
rgb = "0.8.36"
thiserror = "1.0.40"
webp = "0.2.2"

[features]
default = ["codec-dav1d"]
codec-dav1d = ["libavif/codec-dav1d"]
codec-aom = ["libavif/codec-aom"]

test-slow = []
