[package]
name = "pic-store-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
deadpool-diesel = { version = "=0.4.1", features = ["postgres"]}
diesel = { version = "=2.0.4", features = ["chrono", "postgres", "uuid", "serde_json"] }
diesel-derive-enum = { version = "=2.0.1", features = ["postgres"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
base64 = "0.21.5"
thiserror = "1.0.40"
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
async-trait = "0.1.68"
image = "0.24.7"
dotenv = "0.15.0"
futures = "0.3.28"
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
lazy_static = "1.4.0"
eyre = "0.6.8"
