[package]
name = "pic-store-http-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
eyre = "0.6.8"
http-body = "0.4.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tracing = "0.1.35"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
