[package]
name = "pic-store-http-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
eyre = "0.6.8"
http-body = "0.4.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
