[package]
name = "pic-store-http-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
eyre = "0.6.8"
http-body = "0.4.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
