[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
pic-store-db = { path = "../db" }
sea-orm-migration = { version = "^0.8.0", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"]}
tokio = { version = "1.19.2", features = ["full"] }

