[package]
name = "pic-store-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
clap = "3.1.18"
dotenv = "0.15.0"
tokio = { version = "1.19.2", features = [ "full", "test-util" ] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
