[package]
name = "pic-store-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pic-store-db = { path = "../db" }
async-trait = "0.1.58"
backon = "0.2.0"
http = "0.2.8"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["fs"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
bytes = "1.3.0"
futures = "0.3.25"
object_store = { version = "0.5.1", features = ["aws"] }
tracing = "0.1.37"
eyre = "0.6.8"
