[package]
name = "pic-store-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pic-store-db = { path = "../db" }
async-trait = "0.1.68"
backon = "0.2.0"
http = "0.2.9"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["fs"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
bytes = "1.4.0"
futures = "0.3.28"
object_store = { version = "0.5.6", features = ["aws"] }
tracing = "0.1.37"
eyre = "0.6.8"
