[package]
name = "pic-store-test"
version = "0.2.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
log = "0.4.17"
once_cell = "1.16.0"
tokio = { version = "1.22.0", features = ["full", "test-util"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
